--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="home-info">
         <h1>Tonusri Dey Prome</h1>
         <h2>I'm a Student</h2>
-        <p>I am a student in the department of Computer Science and Engineering (CSE) at Metropolitan University.
+        <p>I study Computer Science and Engineering (CSE) at Metropolitan University,Sylhet.
     I am currently learning web development using HTML and CSS.</p>
     <div class="btn-sci">
         <a href="#" class="btn">Download CV</a>
@@ -50,4 +50,3 @@
 
 </body>
 </html>
-
