Fix image source and correct link attributes
Updated image source from 'home1.png' to 'home1.jpg' and fixed 'herf' typos in social media links.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="home-img">
         <div class="img-box">
             <div class="img-item">
-                <img src="home1.png" alt="">
+                <img src="home1.jpg" alt="">
 
             </div>
         </div>
@@ -50,3 +50,4 @@
 
 </body>
 </html>
+
